# RustyPainter

./: Cargo.toml  README.md
src/: attributes_dialog.rs  main.rs  paint_canvas.rs  res.rs
