[package]
name = "rusty_painter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "x86")'.dependencies]
fltk = { version = "^1.4.1" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
fltk = { version = "^1.4.1", features = ["fltk-bundled"] }

[dependencies]
image = "^0.24.6"
rust-embed = "8.3.0"
